--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -35,4 +35,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+.product-container {
+  border: solid white 2px;
+  margin: 20px;
+  padding: 20px;
+  color: #61dafb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
 }
